--- a/personal.html
+++ b/personal.html
@@ -24,11 +24,11 @@
 	
 	<main>
 		<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<br>
-			<img src = "images/wisconsin_dells.jpg" width="1000" alt="Three kids are smiling by Sasquatch Lake"/>
-			<img src = "images/badlands.jpg" width="1000" alt="Three kids are by the sign of Ben Reifel Visitor Center"/>
-			<img src = "images/falling.jpg" width="1000" alt="A kid falling is holding the edge of a sand cliff"/>
-			<img src = "images/jewel_cave.jpg" width="1000" alt="Three kids are by the sign of Jewel Cave National Monument"/>
-			<img src = "images/rushmore.jpg" width="1000" alt = "A zoomed in picture of rushmore"/>
+			<img src = "images/wisconsin_dells.jpg" width="1000" alt="Three kids are smiling by Sasquatch Lake">
+			<img src = "images/badlands.jpg" width="1000" alt="Three kids are by the sign of Ben Reifel Visitor Center">
+			<img src = "images/falling.jpg" width="1000" alt="A kid falling is holding the edge of a sand cliff">
+			<img src = "images/jewel_cave.jpg" width="1000" alt="Three kids are by the sign of Jewel Cave National Monument">
+			<img src = "images/rushmore.jpg" width="1000" alt = "A zoomed in picture of rushmore">
 		</p>
 	</main>
 
