--- a/personal.html
+++ b/personal.html
@@ -27,7 +27,7 @@
 			<img src = "images/wisconsin_dells.jpg" width="1000" alt="Three kids are smiling by Sasquatch Lake">
 			<img src = "images/badlands.jpg" width="1000" alt="Three kids are by the sign of Ben Reifel Visitor Center">
 			<img src = "images/falling.jpg" width="1000" alt="A kid falling is holding the edge of a sand cliff">
-			<img src = "images/jewel_cave.jpg" width="1000" alt="Three kids are by the sign of Jewel Cave National Monument">
+			<img src = "images/jewel_cave.JPG" width="1000" alt="Three kids are by the sign of Jewel Cave National Monument">
 			<img src = "images/rushmore.jpg" width="1000" alt = "A zoomed in picture of rushmore">
 		</p>
 	</main>
